test/tests/compiler/7_compound_statements/valid/hidden_variable.plx



pub fn main(none) i32 {
    a: i32 = 2
    {
        a: i32 = 1
        return a
    }
}
